# coursework_6

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend_django/ads/: urls.py
backend_django/ads/models/: ad.py  comment.py
backend_django/ads/serializers/: __init__.py  ad.py  comment.py
backend_django/ads/views/: __init__.py  ad.py  comment.py
backend_django/backend_django/: settings.py  urls.py
backend_django/fixtures/: users.json
backend_django/users/: managers.py  models.py  serializers.py  urls.py
deploy/: nginx.conf
postgres_data/: postmaster.pid
postgres_data/base/13455/: pg_internal.init
postgres_data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16385  16387  16392  16393  16395  16397  16400  16402  16404  16406  16409  16411  16416  16418  16420  16425  16427  16432  16434  16435  16436  16441  16443  16448  16449  16450  16453  16455  16457  16458  16459  16460  16461  16465  (+126 more)
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13455.stat  db_16384.stat  global.stat
postgres_data/pg_stat_tmp/: db_0.stat  db_13455.stat  db_16384.stat  global.stat
users/: models.py
